--- a/insurance_demo.ipynb
+++ b/insurance_demo.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
     "from flask import Flask, request\n",
     "from threading import Thread\n",
     "from box_sdk_gen import BoxOAuth, BoxClient, OAuthConfig, FileTokenStorage, BoxClient, GetAuthorizeUrlOptions, CreateFolderParent, UploadFileAttributes, UploadFileAttributesParentField, FileReferenceV2025R0, CreateDocgenBatchV2025R0DestinationFolder, DocGenDocumentGenerationDataV2025R0\n",
-    "from agents import Agent, Runner, function_tool, WebSearchTool, input_guardrail, GuardrailFunctionOutput\n",
+    "from agents import Agent, Runner, function_tool, WebSearchTool, input_guardrail, GuardrailFunctionOutput, trace\n",
     "from agents.extensions.handoff_prompt import prompt_with_handoff_instructions\n",
     "import datetime\n",
     "from openai import OpenAI\n",
@@ -105,11 +105,11 @@
     "import json\n",
     "\n",
     "# Box Custom Application IDs (replace with your own)\n",
-    "BOX_CLIENT_ID = 'CLIENT_ID'\n",
-    "BOX_CLIENT_SECRET = 'CLIENT_SECRET'\n",
+    "BOX_CLIENT_ID = 'client_id'\n",
+    "BOX_CLIENT_SECRET = 'client_secret'\n",
     "\n",
     "# Open AI Key (replace with your own)\n",
-    "os.environ['OPENAI_API_KEY'] = 'OPENAI_API_KEY'\n",
+    "os.environ['OPENAI_API_KEY'] = 'your_openai_api_key'\n",
     "openAIClient = OpenAI()\n",
     "\n",
     "# Paths to local files and folders\n",
@@ -121,7 +121,7 @@
     "BASE_FOLDER_NAME = \"Open AI Demo\"\n",
     "CLAIMS_FOLDER_NAME = \"Claims\"\n",
     "CLAIM_ID = \"G8947892834455\"\n",
-    "BASE_FOLDER_ID = \"BASE_FOLDER_ID\"  # Replace with your Box folder ID. It can also be 0.\n",
+    "BASE_FOLDER_ID = \"317948020158\"\n",
     "\n",
     "# Global variable to store folder and file IDs for later use\n",
     "uploaded_ids = {}\n",
@@ -344,7 +344,7 @@
     "    print(f\"Created images folder: {images_folder.name} (ID: {images_folder.id})\")\n",
     "\n",
     "    # 6. Upload all crash images to the images folder\n",
-    "    uploaded_image_urls = {}  \n",
+    "    uploaded_image_ids = {}  \n",
     "\n",
     "    for image_file in os.listdir(images_folder_path):\n",
     "        image_path = os.path.join(images_folder_path, image_file)\n",
@@ -358,11 +358,8 @@
     "                    img_stream\n",
     "                )\n",
     "            uploaded_image = img_result.entries[0]\n",
-    "            print(f\"Uploaded image: {uploaded_image.name} (ID: {uploaded_image.id})\")\n",
-    "            # Get the temporary download URL\n",
-    "            file_info = client.files.get_file_by_id(uploaded_image.id, fields=[\"download_url\"])\n",
-    "            print(f\"Download URL: {file_info.download_url}\")\n",
-    "            uploaded_image_urls[uploaded_image.name] = file_info.download_url  # Store for later use\n",
+    "            print(f\"Uploaded image: {uploaded_image.name} (ID: {uploaded_image.id})\")    \n",
+    "            uploaded_image_ids[uploaded_image.name] = uploaded_image.id\n",
     "\n",
     "        # Upload report template\n",
     "    with open(report_template_path, 'rb') as f:\n",
@@ -389,7 +386,7 @@
     "        \"claims_folder_id\": claims_folder.id,\n",
     "        \"claim_folder_id\": claim_folder.id,\n",
     "        \"images_folder_id\": images_folder.id,\n",
-    "        \"uploaded_image_urls\": uploaded_image_urls,\n",
+    "        \"uploaded_image_ids\": uploaded_image_ids,\n",
     "        \"template_file_id\": uploaded_template.id\n",
     "    }\n",
     "\n",
@@ -671,8 +668,14 @@
     "    print(\"Loading customer information …\")\n",
     "    customer, raw_json = parse_customer_info_file(CLAIM_INFO_FILE_PATH)\n",
     "\n",
-    "    # public image URLs\n",
-    "    image_urls = list(uploaded_ids[\"uploaded_image_urls\"].values())\n",
+    "    image_urls = []\n",
+    "    image_ids = list(uploaded_ids[\"uploaded_image_ids\"].values())\n",
+    "    for image_id in image_ids:\n",
+    "        # Get the temporary download URL\n",
+    "        file_info = box_client.files.get_file_by_id(image_id, fields=[\"download_url\"])\n",
+    "        print(f\"Download URL: {file_info.download_url}\")\n",
+    "        image_urls.append(file_info.download_url)\n",
+    "    \n",
     "\n",
     "    customer_address = (\n",
     "        f\"{customer.street_address}, {customer.city}, \"\n",
@@ -687,7 +690,8 @@
     "    \"\"\"\n",
     "\n",
     "    print(\"Running claim orchestrator …\")\n",
-    "    result = await Runner.run(claim_orchestrator, query)\n",
+    "    with trace(\"Joke workflow\"):\n",
+    "        result = await Runner.run(claim_orchestrator, query)\n",
     "\n",
     "    # Strictly require a valid InsuranceReport.  If not, raise immediately.\n",
     "    try:\n",
